RESOLVED FIXED29169
[GTK] EventSender does not set 'window' property on synthesized GDK events
https://bugs.webkit.org/show_bug.cgi?id=29169
Summary [GTK] EventSender does not set 'window' property on synthesized GDK events
Martin Robinson
Reported 2009-09-10 22:21:58 PDT
I noticed another issue with EventSender events tonight (for some reason this did not manifest before). The synthesized GDK events do not set the 'window' property. Some event handling routines require this, in particular gtk_im_context_filter_keypress.
Attachments
Patch for this issue (6.14 KB, patch)
2009-09-10 22:25 PDT, Martin Robinson
no flags
Patch for this issue (rev2) (6.17 KB, patch)
2009-09-11 08:27 PDT, Martin Robinson
jmalonzo: review+
jmalonzo: commit-queue-
Martin Robinson
Comment 1 2009-09-10 22:25:27 PDT
Created attachment 39410 [details] Patch for this issue I've attached a patch for this issue.
Xan Lopez
Comment 2 2009-09-11 00:38:16 PDT
Comment on attachment 39410 [details] Patch for this issue Even though in this case it will be the same thing, I think it's more straightforward to use the widget's window instead of the parent's window, right?
Martin Robinson
Comment 3 2009-09-11 08:27:01 PDT
Created attachment 39435 [details] Patch for this issue (rev2) Very much so. What a silly mistake. :) I've attached a new patch.
Jan Alonzo
Comment 4 2009-09-11 17:08:10 PDT
Comment on attachment 39435 [details] Patch for this issue (rev2) r=me.
Jan Alonzo
Comment 5 2009-09-13 03:25:31 PDT
(In reply to comment #4) > (From update of attachment 39435 [details]) > r=me. Landed as http://trac.webkit.org/changeset/48342.
Note You need to log in before you can comment on or make changes to this bug.