2009-09-13  Martin Robinson  <martin.james.robinson@gmail.com>

Reviewed by Xan Lopez and Jan Alonzo.

        [GTK] EventSender does not set 'window' property on synthesized GDK events
        https://bugs.webkit.org/show_bug.cgi?id=29169

        Set the window property on synthesized GDK events in the GTK+ EventSender.

        * DumpRenderTree/gtk/EventSender.cpp:
        (contextClickCallback):
        (mouseDownCallback):
        (mouseUpCallback):
        (mouseMoveToCallback):
        (keyDownCallback):

git-svn-id: svn://svn.chromium.org/blink/trunk@48342 bbb929c8-8fbe-4397-9dbb-9b2b20218538