third_party/WebKit/WebKitTools/DumpRenderTree/gtk/EventSender.cpp
@@ -97,15 +97,16 @@ static JSValueRef contextClickCallback(JSContextRef context, JSObjectRef functio
 {
     webkit_web_frame_layout(mainFrame);
 
+    WebKitWebView* view = webkit_web_frame_get_web_view(mainFrame);
+    if (!view)
+        return JSValueMakeUndefined(context);
+
     GdkEvent event;
     memset(&event, 0, sizeof(event));
     event.button.button = 3;
     event.button.x = lastMousePositionX;
     event.button.y = lastMousePositionY;
-
-    WebKitWebView* view = webkit_web_frame_get_web_view(mainFrame);
-    if (!view)
-        return JSValueMakeUndefined(context);
+    event.button.window = gtk_widget_get_window(GTK_WIDGET(view));
 
     gboolean return_val;
     down = true;
@@ -130,6 +131,10 @@ static void updateClickCount(int /* button */)
 
 static JSValueRef mouseDownCallback(JSContextRef context, JSObjectRef function, JSObjectRef thisObject, size_t argumentCount, const JSValueRef arguments[], JSValueRef* exception)
 {
+    WebKitWebView* view = webkit_web_frame_get_web_view(mainFrame);
+    if (!view)
+        return JSValueMakeUndefined(context);
+
     down = true;
 
     GdkEvent event;
@@ -138,15 +143,12 @@ static JSValueRef mouseDownCallback(JSContextRef context, JSObjectRef function, 
     event.button.button = 1;
     event.button.x = lastMousePositionX;
     event.button.y = lastMousePositionY;
+    event.button.window = gtk_widget_get_window(GTK_WIDGET(view));
 
     updateClickCount(1);
 
     if (!msgQueue[endOfQueue].delay) {
         webkit_web_frame_layout(mainFrame);
-
-        WebKitWebView* view = webkit_web_frame_get_web_view(mainFrame);
-        if (!view)
-            return JSValueMakeUndefined(context);
 
         gboolean return_val;
         g_signal_emit_by_name(view, "button_press_event", &event, &return_val);
@@ -165,6 +167,11 @@ static JSValueRef mouseDownCallback(JSContextRef context, JSObjectRef function, 
 
 static JSValueRef mouseUpCallback(JSContextRef context, JSObjectRef function, JSObjectRef thisObject, size_t argumentCount, const JSValueRef arguments[], JSValueRef* exception)
 {
+
+    WebKitWebView* view = webkit_web_frame_get_web_view(mainFrame);
+    if (!view)
+        return JSValueMakeUndefined(context);
+
     down = false;
 
     GdkEvent event;
@@ -173,6 +180,7 @@ static JSValueRef mouseUpCallback(JSContextRef context, JSObjectRef function, JS
     event.button.button = 1;
     event.button.x = lastMousePositionX;
     event.button.y = lastMousePositionY;
+    event.button.window = gtk_widget_get_window(GTK_WIDGET(view));
 
     if ((dragMode && !replayingSavedEvents) || msgQueue[endOfQueue].delay) {
         msgQueue[endOfQueue].event = event;
@@ -180,10 +188,6 @@ static JSValueRef mouseUpCallback(JSContextRef context, JSObjectRef function, JS
         replaySavedEvents();
     } else {
         webkit_web_frame_layout(mainFrame);
-
-        WebKitWebView* view = webkit_web_frame_get_web_view(mainFrame);
-        if (!view)
-            return JSValueMakeUndefined(context);
 
         gboolean return_val;
         g_signal_emit_by_name(view, "button_release_event", &event, &return_val);
@@ -197,6 +201,10 @@ static JSValueRef mouseUpCallback(JSContextRef context, JSObjectRef function, JS
 
 static JSValueRef mouseMoveToCallback(JSContextRef context, JSObjectRef function, JSObjectRef thisObject, size_t argumentCount, const JSValueRef arguments[], JSValueRef* exception)
 {
+    WebKitWebView* view = webkit_web_frame_get_web_view(mainFrame);
+    if (!view)
+        return JSValueMakeUndefined(context);
+
     if (argumentCount < 2)
         return JSValueMakeUndefined(context);
 
@@ -210,16 +218,13 @@ static JSValueRef mouseMoveToCallback(JSContextRef context, JSObjectRef function
     event.motion.x = lastMousePositionX;
     event.motion.y = lastMousePositionY;
     event.motion.time = GDK_CURRENT_TIME;
+    event.motion.window = gtk_widget_get_window(GTK_WIDGET(view));
 
     if (dragMode && down && !replayingSavedEvents) {
         msgQueue[endOfQueue].event = event;
         msgQueue[endOfQueue++].isDragEvent = true;
     } else {
         webkit_web_frame_layout(mainFrame);
-
-        WebKitWebView* view = webkit_web_frame_get_web_view(mainFrame);
-        if (!view)
-            return JSValueMakeUndefined(context);
 
         gboolean return_val;
         g_signal_emit_by_name(view, "motion_notify_event", &event, &return_val);
@@ -382,6 +387,7 @@ static JSValueRef keyDownCallback(JSContextRef context, JSObjectRef function, JS
     memset(&event, 0, sizeof(event));
     event.key.keyval = gdkKeySym;
     event.key.state = state;
+    event.key.window = gtk_widget_get_window(GTK_WIDGET(view));
 
     gboolean return_val;
     event.key.type = GDK_KEY_PRESS;
